// Copyright 2015, gRPC Authors
// All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
package accounting.account;

option java_multiple_files = true;
option java_package = "com.github.conanchen.gedit.accounting.journal.grpc";
option java_outer_classname = "AccountingJournalProto";
option objc_class_prefix = "ACCJRNL";

import "/proto/common/common.proto";

// The bonus service definition.
//https://accountingexplained.com/financial/cycle/
//https://medium.com/@RobertKhou/double-entry-accounting-in-a-relational-database-2b7838a5d7f8
service AccountingJournal {

    rpc AddJournal (AddJournalRequest) returns (JournalResponse) {
    }

    rpc UpsertJournalPostings (Journal) returns (JournalResponse) {
        //will call accounting_posting service to compute postings
    }

    rpc GetJournal (GetJournalRequest) returns (JournalResponse) {
    }

    rpc ListJournal (ListJournalRequest) returns (stream JournalResponse) {
    }

}

message AddJournalRequest {
    oneof event {
        Payment payment = 1;
        UserRegister userRegister = 2;
        StoreRegister storeRegister = 3;
    }
}

message Payment {
    string id = 1; //支付单编号

    string payerId = 11; //支付人
    string payeeId = 12; //收款人
    string payeeStoreId = 13;
    string payeeWorkerId = 14;
    int32 shouldpay = 15; //应付金额 = 实付金额 + 实付积分等价金额
    int32 actualpay = 16; //实付金额
    int32 bonuspay = 17; //实付积分代替金额

    string channel = 26; //支付通道如支付宝、微信、云闪付
}

message UserRegister {
    string userId = 11;
    string introducerId = 12;
    int64 created = 14;
}

message StoreRegister {
    string storeId = 11;
    string introducerId = 12;
    string storeOwnerId = 13;
    int64 created = 14;
}

message ListJournalRequest {
    string accountId = 11;

    int32 from = 100;
    int32 size = 101;

}

message GetJournalRequest {
    string id = 1;
}

message JournalResponse {
    common.Status status = 999;
    Journal journal = 1;
}

message Journal {
    string accountId = 10;
    string id = 11;
    int64 created = 12;
    oneof event {
        Payment payment = 1;
        UserRegister userRegister = 2;
        StoreRegister storeRegister = 3;
    }

    repeated string postingIds = 33;
    int64 postingsCreated = 34;
}